--- a/source/form.html
+++ b/source/form.html
@@ -47,93 +47,99 @@
         <p class="form__description">помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
 
         <form class="form__rewiew" method="POST" action="https://echo.htmlacademy.ru">
-          <div class="form__wrapper">
-            <fieldset class="form__module module-name">
-              <legend class="form__legent">представьтесь:</legend>
-              <p class="form__body">
-                <label class="form__label--text">
-                  имя*:<input class="module-name__input" type="text" name="name" placeholder="Петр">
-                </label>
-              </p>
-              <p class="form__body">
-                <label class="form__label--text">
-                  фамилия*:<input class="module-name__input" type="text" name="surname" placeholder="Иванов">
-                </label>
-              </p>
-              <p class="form__body">
-                <label class="form__label--text">
-                  отчество:<input class="module-name__input" type="text" name="patronymic" placeholder="Александрович">
-                </label>
-              </p>
+          <div class="form__wrapper form__wrapper--name">
+            <fieldset class="form__module form__module--name">
+              <legend class="form__legent form__legent--name">представьтесь:</legend>
+              <ul class="form__list form__list--name">
+                <li class="form__body">
+                  <label class="form__label form__label--text" for="name">имя*:</label>
+                  <input class="form__input form__input--text" id="name" type="text" name="name" placeholder="Петр">
+                </li>
+                <li class="form__body">
+                  <label class="form__label form__label--text" for="surname">фамилия*:</label>
+                  <input class="form__input form__input--text" id="surname" type="text" name="surname" placeholder="Иванов">
+                </li>
+                <li class="form__body">
+                  <label class= "form__label form__label--text" for="patronymic">отчество:</label>
+                  <input class="form__input form__input--text" id="patronymic" type="text" name="patronymic" placeholder="Александрович">
+                </li>
+              </ul>
             </fieldset>
           </div>
 
-          <div class="form__wrapper">
-            <fieldset class="form__module module-contacts">
-              <legend class="form__legent">контактная информация:</legend>
-              <p class="form__body">
-                <label class="form__label--text">
-                  контактный телефон*:<input class="module-contacts__input"  type="tel" name="tel" placeholder="Введите телефон">
-                </label>
-              </p>
-              <p class="form__body">
-                <label class="form__label--text">
-                  электронная почта*:<input class="module-contacts__input" type="email" name="email" placeholder="Введите e-mail">
-                </label>
-              </p>
+          <div class="form__wrapper form__wrapper--contacts">
+            <fieldset class="form__module form__module--contacts">
+              <legend class="form__legent form__legent--contacts">контактная информация:</legend>
+              <ul class="form__list form__list--contacts">
+                <li class="form__body form__body--contacts">
+                  <label class="form__label form__label--contacts" for="tel">контактный телефон*:</label>
+                  <input class="form__input form__input--text form__input--tel" id="tel" type="tel" name="tel" placeholder="Введите телефон">
+                </li>
+                <li class="form__body form__body--contacts">
+                  <label class="form__label form__label--contacts" for="email">электронная почта*:</label>
+                  <input class="form__input form__input--text form__input--email" id="email" type="email" name="email" placeholder="Введите e-mail">
+                </li>
+              </ul>
             </fieldset>
           </div>
 
-          <div class="form__wrapper">
-            <fieldset class="form__module module-radio">
-              <legend class="form__legent">ваше общее впечатление:</legend>
-              <p class="form__body">
-                <input class="module-radio__input" name="radio" value="positively" type="radio" id="positively" checked>
-                <label class="form__label--check" for="positively">Скорее положительное</label>
-              </p>
-              <p class="form__body">
-                <input class="module-radio__input" name="radio" value="negatively" type="radio" id="negatively">
-                <label class="form__label--check" for="negatively">Скорее отрицательное</label>
-              </p>
-              <p class="form__body">
-                <input class="module-radio__input" name="radio" value="nothing" type="radio" id="nothing">
-                <label class="form__label--check" for="nothing">Затрудняюсь ответить</label>
-              </p>
+          <div class="form__wrapper form__wrapper--radio">
+            <fieldset class="form__module form__module--radio">
+              <legend class="form__legent form__legent--radio">ваше общее впечатление:</legend>
+              <ul class="form__list form__list--radio">
+                <li class="form__body form__body--radio">
+                  <input class="form__input form__input--radio" name="radio" value="positively" type="radio" id="positively" checked>
+                  <label class="form__label form__label--check" for="positively">Скорее положительное</label>
+                </li>
+                <li class="form__body form__body--radio">
+                  <input class="form__input form__input--radio" name="radio" value="negatively" type="radio" id="negatively">
+                  <label class="form__label form__label--check" for="negatively">Скорее отрицательное</label>
+                </li>
+                <li class="form__body form__body--radio">
+                  <input class="form__input form__input--radio" name="radio" value="nothing" type="radio" id="nothing">
+                  <label class="form__label form__label--check" for="nothing">Затрудняюсь ответить</label>
+                </li>
+              </ul>
             </fieldset>
           </div>
 
-          <div class="form__wrapper">
-            <fieldset class="form__module module-checkbox">
-              <legend class="form__legent">посещаемые достопримечательности:</legend>
-              <p class="form__body">
-                <input class="module-checkbox__input" type="checkbox" name="checkbox" value="most" id="most" checked>
-                <label class="form__label--check" for="most">Мост Дъявола</label>
-              </p>
-              <p class="form__body">
-                <input class="module-checkbox__input" type="checkbox" name="checkbox" value="mountain" id="mountain" checked>
-                <label class="form__label--check" for="mountain">Гора-Колокол</label>
-              </p>
-              <p class="form__body">
-                <input class="module-checkbox__input" type="checkbox" name="checkbox" value="park" id="park" checked>
-                <label class="form__label--check" for="park">Слайд-Парк</label>
-              </p>
-              <p class="form__body">
-                <input class="module-checkbox__input" type="checkbox" name="checkbox" value="rock" id="rock">
-                <label class="form__label--check" for="rock">Красные скалы</label>
-              </p>
+          <div class="form__wrapper form__wrapper--checkbox">
+            <fieldset class="form__module form__module--checkbox">
+              <legend class="form__legent form__legent--checkbox">посещаемые достопримечательности:</legend>
+              <ul class="form__list form__list--checkbox">
+                <li class="form__body form__body--checkbox">
+                  <input class="form__input form__input--checkbox" type="checkbox" name="checkbox" value="most" id="most" checked>
+                  <label class="form__label form__label--check" for="most">Мост Дъявола</label>
+                </li>
+                <li class="form__body form__body--checkbox">
+                  <input class="form__input form__input--checkbox" type="checkbox" name="checkbox" value="mountain" id="mountain" checked>
+                  <label class="form__label form__label--check" for="mountain">Гора-Колокол</label>
+                </li>
+                <li class="form__body form__body--checkbox">
+                  <input class="form__input form__input--checkbox" type="checkbox" name="checkbox" value="park" id="park" checked>
+                  <label class="form__label form__label--check" for="park">Слайд-Парк</label>
+                </li>
+                <li class="form__body form__body--checkbox">
+                  <input class="form__input form__input--checkbox" type="checkbox" name="checkbox" value="rock" id="rock">
+                  <label class="form__label form__label--check" for="rock">Красные скалы</label>
+                </li>
+              </ul>
             </fieldset>
           </div>
 
-          <div class="form__wrapper">
-            <fieldset class="form__module">
-              <legend class="form__legent">опишите свои эмоции:</legend>
-              <p class="form__body">
+          <div class="form__wrapper form__wrapper--textarea">
+            <fieldset class="form__module form__module--textarea">
+              <legend class="form__legent form__legent--textarea">опишите свои эмоции:</legend>
+              <p class="form__body form__body--textarea">
                 <textarea class="form__textarea" name="text" placeholder="Опишите подробно все свои восторги"></textarea>
               </p>
             </fieldset>
           </div>
 
-          <button class="form__submit" type="submit">отправить отзыв</button>
+          <div class="form__footer">
+            <button class="form__submit" type="submit">отправить отзыв</button>
+            <small class="form__explanation">* - обязательные поля</small>
+          </div>
         </form>
       </section>
 
@@ -144,25 +150,46 @@
         <b class="page-footer__hash-tag">#visitSEDONA</b>
 
         <div class="page-footer__social social">
-          <ul class="social-list">
-            <li class="social-item">
-              <a class="socail-link social-link--twitter" href="#">твитер</a>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="#">
+                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+                  <g id="W6EeEF_1_">
+                    <g>
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.283,0.153c1.736-0.484,3.074,0.264,3.685,1.15 c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86 c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0 c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881 c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461 c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z"/>
+                    </g>
+                  </g>
+                </svg>
+                <span class="social__sign">твитер</span>
+              </a>
             </li>
-            <li class="social-item">
-              <a class="socail-link social-link--facebook" href="https://www.facebook.com/htmlacademy">фейсбук</a>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.672px" height="18.944px" viewBox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
+                  <path d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114 H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787 C5.765,5.069,5.75,3.709,6.275,3.356z"/>
+                </svg>
+                <span class="social__sign">фейсбук</span>
+              </a>
             </li>
-            <li class="social-item">
-              <a class="socail-link social-link--youtube" href="#">ютуб</a>
+            <li class="social__item">
+              <a class="social__link social-link--youtube" href="#">
+                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px" viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
+                  <path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
+                </svg>
+                <span class="social__sign">ютуб</span>
+              </a>
             </li>
           </ul>
         </div>
 
         <div class="page-footer__copyright copyright">
-          <p class="copyright__discription">разработано
-            <a class="copyrigth__link" href="https://htmlacademy.ru/intensive/adaptive">
-              <img class="copyrigth__image" src="img/htmlacademy.svg" width="27" height="34" alt="логотип htmlacademy">
-            </a>
-          </p>
+          <p class="copyright__discription">разработано</p>
+          <a class="copyrigth__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+              <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+            </svg>
+            <span class="copyrigth__sign">Логотип html academy</span>
+          </a>
         </div>
       </div>
     </footer>
