--- a/source/index.html
+++ b/source/index.html
@@ -13,10 +13,10 @@
         <a class="page-header__logo">
           <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
         </a>
-        <button class="page-header__button" type="button">Открыть меню</button>
+        <button class="page-header__button visually-hidden" type="button">Открыть меню</button>
       </div>
 
-      <nav class="main-nav">
+      <nav class="main-nav--closed">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
