--- a/source/foto.html
+++ b/source/foto.html
@@ -53,9 +53,9 @@
           <li class="gallery__item">
             <figure class="gallery__wrapper gallery__wrapper--first">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/photo-sunset-desctop@1x.jpg">
-                <img class="gallery__image gallery__image--spaces gallery__image--first" src="img/photo-sunset-mobile@1x.jpg"  width="280" height="280" alt="пейзаж дороги, уходящей в закат в стороны красных гор">
+                <source media="(min-width: 1200px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
+                <img class="gallery__image gallery__image--spaces gallery__image--first" src="img/photo-sunset-mobile@1x.jpg" width="280px" height="280px" srcset="img/photo-sunset-mobile@1x.jpg 2x" alt="пейзаж дороги, уходящей в закат в стороны красных гор">
               </picture>
               <figcaption class="gallery__signature gallery__signature--first">
                 <div class="gallery__signature-wrapper">
@@ -79,7 +79,11 @@
           </li>
           <li class="gallery__item ">
             <figure class="gallery__wrapper">
-              <img class="gallery__image gallery__image--vegetation" src="img/photo-cactus-mobile@1x.jpg"  width="280" height="280" alt="тонкие кактусы с отростками по кругу стебля, на которых расположены цветы на фоне красных гор">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+                <img class="gallery__image gallery__image--vegetation" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="тонкие кактусы с отростками по кругу стебля, на которых расположены цветы на фоне красных гор">
+              </picture>
               <figcaption class="gallery__signature">
                 <div class="gallery__signature-wrapper">
                   <h3 class="gallery__item-title">местная растительность</h3>
@@ -102,7 +106,11 @@
           </li>
           <li class="gallery__item">
             <figure class="gallery__wrapper">
-              <img class="gallery__image gallery__image--road" src="img/photo-roads-mobile@1x.jpg"  width="280" height="280" alt="горная извилистая дорога затерянная в в хвойных деревьях склона горы">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
+                <img class="gallery__image gallery__image--road" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="извилистая горная дорога между деревьев">
+              </picture>
               <figcaption class="gallery__signature">
                 <div class="gallery__signature-wrapper">
                   <h3 class="gallery__item-title">дорога на север</h3>
@@ -125,7 +133,11 @@
           </li>
           <li class="gallery__item">
             <figure class="gallery__wrapper">
-              <img class="gallery__image gallery__image--bridge" src="img/photo-bridge-mobile@1x.jpg"  width="280" height="280" alt="мост из красной скальной породы на фоне красных горных образований и зеленой долины">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
+                <img class="gallery__image gallery__image--bridge" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="естественный горный мост на фоне долины с красными горами">
+              </picture>
               <figcaption class="gallery__signature">
                 <div class="gallery__signature-wrapper">
                   <h3 class="gallery__item-title">мост дъявола</h3>
@@ -153,7 +165,11 @@
         <h2 class="video__title">все еще сомневаетесь?</h2>
         <p class="video__description">смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         <div class="video__video-player">
-          <img class="video__image" src="img/video-mobile@1x.jpg"  width="320" height="201" alt="извивающаяся между гор дорога">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+            <img class="video__image" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="шоссе, идущее между горного массива">
+          </picture>
           <div class="video__controls">
             <div class="video__progress-control"></div>
             <div class="video__replay-control">
